# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.1].define(version: 2026_05_24_130820) do
+ActiveRecord::Schema[8.1].define(version: 2026_05_25_065348) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -44,8 +44,12 @@ ActiveRecord::Schema[8.1].define(version: 2026_05_24_130820) do
   end
 
   create_table "task_templates", force: :cascade do |t|
+    t.boolean "active", default: true, null: false
     t.datetime "created_at", null: false
     t.text "description"
+    t.jsonb "schedule_options", default: {}, null: false
+    t.string "schedule_type", default: "once", null: false
+    t.date "start_date", default: -> { "CURRENT_DATE" }, null: false
     t.string "title", null: false
     t.datetime "updated_at", null: false
   end
